kube-prometheus-stack/grafana-dashboard-ingressroute-https.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: grafana-redirect-scheme
  namespace: monitoring
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-dashboard-http
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`grafana.example.com`)
      kind: Rule
      middlewares:
        - name: grafana-redirect-scheme
      services:
        - name: k0s-kube-prometheus-stack-grafana
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-dashboard-https
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.example.com`)
      kind: Rule
      services:
        - name: k0s-kube-prometheus-stack-grafana
          port: 80
  tls:
    certResolver: pebble
