kube-prometheus-stack/prometheus-dashboard-ingressroute-https.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: prometheus-redirect-scheme
  namespace: monitoring
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-http
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prometheus.example.com`)
      kind: Rule
      middlewares:
        - name: prometheus-redirect-scheme
      services:
        - name: k0s-kube-prometheus-stack-prometheus
          port: 9090
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-https
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.example.com`)
      kind: Rule
      services:
        - name: k0s-kube-prometheus-stack-prometheus
          port: 9090
  tls:
    certResolver: pebble
